@@ -1,10 +1,0 @@
-# Pragmas.
-use strict;
-use warnings;
-
-# Modules.
-use Test::NoWarnings;
-use Test::Pod::Coverage 'tests' => 2;
-
-# Test.
-pod_coverage_ok('MetaTrans::SlovnikCz', 'MetaTrans::SlovnikCz is covered.');
